[package]
name = "drowsy"
version = "0.1.0"
authors = ["James McCoy <jamessan@jamessan.com>"]
license = "GPL-3.0-or-later"

[dependencies]
logind-dbus = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
shell-words = "0.1.0"

[badges]
travis-ci = { repository = "jamessan/drowsy", branch = "master" }
